# glossary

./: .buildinfo  .env  .gitignore  Makefile  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
_sources/annotation/: django_examples.rst.txt  index.rst.txt
_sources/devops/: makefile.rst.txt
_sources/docker/: dockerfile.rst.txt  index.rst.txt
_sources/git/: grep.rst.txt  (+6 more)
annotation/: django_examples.html  index.html
applications/: index.html
devops/: index.html  makefile.html  overview.html
django/: index.html  sources.html
docker/: dockerfile.html  index.html
docstring/: examples.html  index.html
examples_python/: except01.py  fluent.py  oop_super.py  sample.py
git/: branches.html  commits.html  grep.html  index.html  origin.html  show.html  stash.html
github/: index.html  multiple_accounts.html
guide_property/: README.rst
guide_typing/: decorator_typing.py
linux/: app_settings.html  find_grep.html  index.html  install.html  os_settings.html  size.html
makefile/: index.html
playwright/: ajax.html  index.html  other.html  page.html
postgres/: console_cli.html  index.html  postgres_cli.html  sql_query_examples.html
python/: exceptions.html  index.html  pip.html  property.html  repl.html  typing.html
python_examples/: index.html
redis/: base.html  examples.html  index.html  redis-py.html
regexr/: base.html  index.html
sources/: index.html  sources.html
sphinx/: examples.html  index.html
tests/: index.html  ruff.html
(+128 files in other folders)
